# AI-Customer-Support-SaaS

./: .env.example  .gitignore  SupportGPT-Architecture-Documentation.md  diff.txt  docker-compose.yml  prompt.txt  scaffold_ai_service.py
.github/workflows/: ai-service.yml  core-api.yml  frontend.yml
ai-service/: .env.example  Dockerfile  pyproject.toml
ai-service/app/: main.py
ai-service/app/api/: dependencies.py
ai-service/app/api/v1/: ai_keys.py  chat.py  health.py  knowledge_base.py
ai-service/app/api/v1/ai_keys/: __init__.py
ai-service/app/api/v1/chat/: __init__.py
ai-service/app/api/v1/knowledge_base/: __init__.py
ai-service/app/core/: config.py  database.py  exceptions.py  security.py
ai-service/app/models/: __init__.py  ai_provider_key.py  ai_usage_daily.py  base.py  document.py  embedding.py
ai-service/tests/: test_health.py
core-api/: Dockerfile  change-role.js  nest-cli.json  package-lock.json  package.json  restore-role.js
core-api/prisma/: schema.prisma
core-api/src/: app.module.ts  main.ts
core-api/src/clients/: ai-service.client.spec.ts  ai-service.client.ts
core-api/src/common/filters/: http-exception.filter.ts
core-api/src/config/: configuration.ts  env.validation.ts
core-api/src/health/: health.controller.ts
core-api/src/prisma/: prisma.service.ts
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: providers.tsx
frontend/src/lib/: api-client.ts  sse.ts
frontend/src/stores/: auth-store.ts  ui-store.ts
infra/docker/: init-db.sql
(+26 files in other folders)
